without php and js

--- a/index.html
+++ b/index.html
@@ -185,11 +185,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact">
+<!--                 <div class="contact">
                     <input class="contactblockname" required placeholder=" Ваше имя" name="name">
                     <input class="contactblockname" type="email" required placeholder=" E-mail" name="e-mail">
                     <textarea class="contactblockmes" required placeholder=" Сообщение" name="mes"></textarea>
                     <button type="submit" class="hireme">Отправить</button>    
+                </div> -->
             </div>
         </main>
     
