--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </main>
     
     <footer id="footer">
-        <img position="relative" width="405px" height="420px" src="/img/cap.png"/>                        
+        <img position="relative" width="405px" height="420px" src="./img/cap.png"/>                        
         <div class="footer">
             <div class="byme">
                 <img src="./img/_DS_2.svg" alt="">
