--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>                        
         <div class="footer">
             <div class="byme">
-                <img src="./img/_DS_2.svg" alt="">
+                <img src="./img/DS2.svg" alt="">
                 <p>I will write the coolest website for you. This site was also made by me ^-^</p>
             </div>
             <div class="address">
